--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://Gloomist805.github.io/"
+baseURL = "https://gloomist805.github.io/Blog/"
 languageCode = "zh-cn"
 title = "一人行者"
 theme = "PaperMod"
