--- a/hugo.toml
+++ b/hugo.toml
@@ -7,6 +7,7 @@ theme = "PaperMod"
   defaultTheme = "auto"
   disableThemeToggle = false
   ShowPostList = true
+  showPostsOnHomePage = true
 
 [params.homeInfoParams]
   Title = "欢迎来到伤心镇"
