--- a/hugo.toml
+++ b/hugo.toml
@@ -4,11 +4,18 @@ title = "一人行者"
 theme = "PaperMod"
 
 [params]
+  [params]
   defaultTheme = "auto"
-  disableThemeToggle = false
-  ShowPostList = true
-  showPostsOnHomePage = true
-  mainSections = ["posts"]
+  ShowReadingTime = true
+  ShowCodeCopyButtons = true
+  ShowPostNavLinks = true
+  ShowBreadCrumbs = true
+  ShowShareButtons = true
+  ShowFullTextinRSS = true
+
+  showHomeInfo = true      # 显示欢迎语
+  showPosts = true         # 显示文章列表
+  homePostLimit = 3        # 只显示最新3篇文章
 
 [params.profileMode]
 enabled = true
