--- a/hugo.toml
+++ b/hugo.toml
@@ -7,6 +7,9 @@ theme = "PaperMod"
   defaultTheme = "auto"
   ShowReadingTime = true
   ShowCodeCopyButtons = true
+  ShowToc = true
+  TocOpen = true
+
 
   # 首页开启文章显示
   showPosts = true
